--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Portfolio</title>
+        <title>Homework 4</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" />
         <link rel="stylesheet" href="css/styles.css" />
     </head>
@@ -36,7 +36,7 @@
         </header>
 
         <main>
-            <section>
+            <section class="projects">
                 <div>
                     <button>All</button>
                     <button>Website</button>
@@ -44,13 +44,67 @@
                     <button>Design</button>
                     <button>Marketing</button>
                 </div>
-                <ul>
-                    <li>
-                        <img src="" alt="" />
-                        <h3></h3>
-                        <p></p>
-                    </li>
-                </ul>
+
+                <div class="container">
+                    <ul class="list">
+                        <li>
+                            <img src="./images/img.jpg" alt="" />
+                            <div class="project-caption">
+                                <h3>Banking App Interface Concep</h3>
+                                <p>App</p>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="./images/img (1).jpg" alt="" />
+                            <div class="project-caption">
+                                <h3>Banking App Interface Concep</h3>
+                                <p>App</p>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="./images/img (2).jpg" alt="" />
+                            <div class="project-caption">
+                                <h3>Banking App Interface Concep</h3>
+                                <p>App</p>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="./images/img (3).jpg" alt="" />
+                            <div class="project-caption">
+                                <h3>Banking App Interface Concep</h3>
+                                <p>App</p>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="./images/img.jpg" alt="" />
+                            <div class="project-caption">
+                                <h3>Banking App Interface Concep</h3>
+                                <p>App</p>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="./images/img (1).jpg" alt="" />
+                            <div class="project-caption">
+                                <h3>Banking App Interface Concep</h3>
+                                <p>App</p>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="./images/img (2).jpg" alt="" />
+                            <div class="project-caption">
+                                <h3>Banking App Interface Concep</h3>
+                                <p>App</p>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="./images/img (3).jpg" alt="" />
+                            <div class="project-caption">
+                                <h3>Banking App Interface Concep</h3>
+                                <p>App</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </section>
         </main>
 
