--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Homework 3</title>
+        <title>Homework 4</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" />
         <link rel="stylesheet" href="css/styles.css" />
     </head>
@@ -47,18 +47,38 @@
             <section class="about section">
                 <ul class="list">
                     <li>
+                        <div class="about-icon">
+                            <svg width="64" height="64">
+                                <use href="./images/icons.svg#antenna-1"></use>
+                            </svg>
+                        </div>
                         <h3>Strategy</h3>
                         <p class="p-dark">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                     </li>
                     <li>
+                        <div class="about-icon">
+                            <svg width="64" height="64">
+                                <use href="./images/icons.svg#clock-1"></use>
+                            </svg>
+                        </div>
                         <h3>Punctuality</h3>
                         <p class="p-dark">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                     </li>
                     <li>
+                        <div class="about-icon">
+                            <svg width="64" height="64">
+                                <use href="./images/icons.svg#diagram-1"></use>
+                            </svg>
+                        </div>
                         <h3>Diligence</h3>
                         <p class="p-dark">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                     </li>
                     <li>
+                        <div class="about-icon">
+                            <svg width="64" height="64">
+                                <use href="./images/icons.svg#astronaut-1"></use>
+                            </svg>
+                        </div>
                         <h3>Technologies</h3>
                         <p class="p-dark">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                     </li>
@@ -84,8 +104,32 @@
                 <ul class="list">
                     <li>
                         <img src="images/profile-1.jpg" alt="Mark Guerrero" />
-                        <h3 class="team-name">Mark Guerrero</h3>
-                        <p class="p-dark">Product Designer</p>
+                        <div class="team-caption">
+                            <h3 class="team-name">Mark Guerrero</h3>
+                            <p class="p-dark">Product Designer</p>
+                            <div class="team-socials">
+                                <a class="team-socials-icon">
+                                    <svg width="16" height="16">
+                                        <use href="./images/icons.svg#instagram-2"></use>
+                                    </svg>
+                                </a>
+                                <a class="team-socials-icon">
+                                    <svg width="16" height="16">
+                                        <use href="./images/icons.svg#twitter-1"></use>
+                                    </svg>
+                                </a>
+                                <a class="team-socials-icon">
+                                    <svg width="16" height="16">
+                                        <use href="./images/icons.svg#linkedin-1"></use>
+                                    </svg>
+                                </a>
+                                <a class="team-socials-icon">
+                                    <svg width="16" height="16">
+                                        <use href="./images/icons.svg#facebook"></use>
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
                     </li>
                     <li>
                         <img src="images/profile-2.jpg" alt="Tom Ford" />
@@ -101,6 +145,33 @@
                         <img src="images/profile-4.jpg" alt="Daniel Wilson" />
                         <h3>Daniel Wilson</h3>
                         <p class="p-dark">UI Designer</p>
+                    </li>
+                </ul>
+            </section>
+
+            <section class="customers">
+                <h2 class="section-title">Customers</h2>
+                <ul class="list">
+                    <li class="customer-icon">
+                        <a href="#">
+                            <svg width="104" height="56">
+                                <use href="./images/icons.svg#Logo-6"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customer-icon">
+                        <a href="#">
+                            <svg width="104" height="56">
+                                <use href="./images/icons.svg#Logo-4"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customer-icon">
+                        <a href="#">
+                            <svg width="104" height="56">
+                                <use href="./images/icons.svg#Logo-5"></use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
             </section>
